--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Created by https://www.gitignore.io/api/osx,c++,windows
+
+# Created by https://www.gitignore.io/api/osx,c++,windows,codeblocks,visualstudiocode
 
 ### C++ ###
 # Prerequisites
@@ -34,6 +35,15 @@
 *.out
 *.app
 
+### CodeBlocks ###
+# specific to CodeBlocks IDE
+*.layout
+*.depend
+
+# generated directories
+bin/
+obj/
+
 ### OSX ###
 *.DS_Store
 .AppleDouble
@@ -61,6 +71,14 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -82,4 +100,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/osx,c++,windows
+# End of https://www.gitignore.io/api/osx,c++,windows,codeblocks,visualstudiocode
